--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node",
     "api"
   ],
-  "author": "Ryan Dhungel",
+  "author": "Project3 Team3",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
