--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A Node Js API",
   "main": "app.js",
   "scripts": {
+    
+     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
     "start": "node app.js"
   },
