--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "A Node Js API",
   "main": "app.js",
   "scripts": {
-    
-     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    //"dev": "nodemon app.js",
+   // "start": "node app.js",
+     "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "toolbox": "react-toolbox-themr"
   },
   "keywords": [
     "node",
