--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     //"dev": "nodemon app.js",
-   // "start": "node app.js",
-     "start": "react-scripts start",
+    "start": "node app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
