--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Node Js API",
   "main": "app.js",
   "scripts": {
-    //"dev": "nodemon app.js",
+    "dev": "nodemon app.js",
     "start": "node app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
