--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodeapi",
+  "name": "challenge",
   "version": "1.0.0",
   "description": "A Node Js API",
   "main": "app.js",
@@ -12,6 +12,11 @@
     "install": "cd client && yarn install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
+  },
+  "engines": {
+    "node": "8.11.3",
+    "npm": "5.6.x",
+    "yarn": "1.10.1"
   },
   "keywords": [
     "node",
