--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node app.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
+    "start": "node app.js",
     "seed": "node server/scripts/seedDB.js",
     "install": "cd client && yarn install",
     "build": "cd client && npm run build",
