--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "description": "A Node Js API",
   "main": "app.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start": "node app.js",
-    "heroku-postbuild": "npm run build"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
-  "engines": {
-    "node": "8.11.3",
-    "npm": "5.6.x",
-    "yarn": "1.10.1"
-  },
-  
+  "keywords": [
+    "node",
+    "api"
+  ],
   "author": "Project3 Team3",
   "license": "ISC",
   "dependencies": {
